Kubernetes/Examples_of_yml_files/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: nginx-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%    
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-pod
        image: nginx:1.7.9
        ports:
        - containerPort: 80
