Kubernetes/Examples_of_yml_files/services.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
  labels:
    app: nginx-app
spec:
  selector:
    app: nginx-app
  type: NodePort
  ports:
  - nodePort: 31000
    port: 80
    targetPort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
  labels:
    app: nginx-app
spec:
  selector:
    app: nginx-app
  type: LoadBalancer
  ports:
  - nodePort: 31000
    port: 80
    targetPort: 80
